changing cart items page title to order placed

--- a/facetouch/templates/cart_view.html
+++ b/facetouch/templates/cart_view.html
@@ -1,5 +1,5 @@
 <html>
-<h1 align="center">Cart Items</h1>
+<h1 align="center">Your order has been successfully placed!!!</h1>
 <ul>
     {% for item in cartItems %}
         <div align="center">
