--- a/facetouch/templates/cart_view.html
+++ b/facetouch/templates/cart_view.html
@@ -1,12 +1,122 @@
 <html>
-<h1 align="center">Your order has been successfully placed!!!</h1>
+<head>
+    <style>
+
+    body {
+
+         background-color: #FFFFFA;
+
+        }
+        .image-container {
+          background-image: url("https://elama-vet.clinic/wp-content/uploads/2018/05/1491.jpg");
+          background-size: contain;
+          <!--background-size: cover;-->
+          position: relative;
+          height: 350px;
+          <!--opacity: 0.5;-->
+
+        }
+
+        .text {
+          background-color: white;
+          color: black;
+          font-size: 7vw;
+          font-weight: bold;
+          margin: 0 auto;
+          padding: 1px;
+          width: 50%;
+          text-align: center;
+          position: absolute;
+          top: 20%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          mix-blend-mode: screen;
+        }
+        .toast{
+            width: 75%;
+            position: fixed;
+            left: 50%;
+            color: darkred;
+            {#margin-left: -37.5%;#}
+        }
+        .centered-and-cropped{
+		    background-color: #F7F4F4;
+		    text-align: center;
+		    border: 0.8px solid;
+            box-shadow: 1px 5px 5px #888888;
+            width: 200px;
+            height: 240px;
+            padding: 0.5% 0.5% 0 0.5%;
+            font-family: "Comic Sans MS", cursive, sans-serif, Arial;
+            <!--font-size: 17px;-->
+            <!--font-weight: 500;-->
+            word-break: break-word;
+            box-sizing: inherit;
+            margin-left: 15px;
+            margin-right: 15px;
+            <!--object-fit: cover-->
+		}
+		.displayItems{
+            float:left;
+            text-align: center;
+            width: 300px;
+		    border: 0.001px solid;
+            box-shadow: 1px 5px 5px #888888;
+
+            <!--height: 240px;-->
+            <!--padding: 100 100 100 100;-->
+            font-family: "Comic Sans MS", cursive, sans-serif, Arial;
+            <!--font-size: 17px;-->
+            <!--font-weight: 500;-->
+            word-break: break-word;
+            box-sizing: inherit;
+            margin-left: 100px;
+            <!--margin-right: 30px;-->
+		}
+		.totalAmount {
+
+    position:relative;
+}
+#price {
+width:100px;
+		height: 100px;
+border: 0.1px solid;
+    box-shadow: 1px 5px 5px #888888;
+    position:absolute;
+    top:200;
+    bottom:0;
+    right:0;
+}
+</style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+</head>
+<body>
+<div hidden="true" id="message" class="toast">Item Added To Cart</div>
+<div class="image-container">
+  <div class="text">FACETOUCH</div>
+</div>
+<h1 align="center" style="font-family:sans-serif;">Your order has been successfully placed!!!</h1>
 <ul>
     {% for item in cartItems %}
-        <div align="center">
-            <img class="centered-and-cropped" width="200" height="200" src="{{ item.image.url }}" />
-            <p> {{ item.name }} </p>
-            <p> $   {{ item.price }} </p>
+        <div class="displayItems">
+            <img class="centered-and-cropped" width="100" height="100" src="{{ item.image.url }}" />
+            <p style="font-size:18px; font-weight:500"> {{ item.name }} </p>
+            <p style="font-size:18px; font-weight:500"> $   {{ item.price }} </p>
         </div>
     {% endfor %}
 </ul>
+<!--<div class="totalAmount">-->
+<!--<p id="price" align="right" ></p>-->
+<!--</div>-->
+<script>
+    var totalPrice = 0;
+    $(document).ready(function() {
+
+        {% for item in cartItems %}
+            totalPrice = totalPrice + {{ item.price }};
+        {% endfor %}
+        document.getElementById('price').innerHTML = totalPrice;
+     });
+</script>
+</body>
 </html>
